auto fixes